--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
-    "expo": "~37.0.3",
+    "expo": "^37.0.12",
     "expo-constants": "^9.0.0",
     "expo-location": "^8.1.0",
     "expo-permissions": "^8.1.0",
@@ -28,8 +28,8 @@
     "react-navigation-stack": "^2.5.1"
   },
   "devDependencies": {
-    "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.8.6",
+    "babel-preset-expo": "~8.1.0"
   },
   "private": true
 }
